--- a/modelo_copin/abstract.tex
+++ b/modelo_copin/abstract.tex
@@ -1,4 +1,1 @@
-Abstract Here
-
-
-
+Question and answer communities are known as a simple and reliable knowledge database. StackExchange group is standing out as one of the biggest of its kind, particularly the ones related to STEM. This work investigates how the amount contributed to such communities, the time spent contributing, contributions over time and the amount of registrations over time are different for contributors that are men or women, as well as whether the quality of such contributions is perceived as equal by the community. Our results point that overall women who are contributing contribute as much, with similar quality, and for a similar period as men. There are however noticeable difference in the preferred type of contribution: women tend to ask more, while men are more likely to contribute answers. These results point to a richer picture of female contribution in those sites, and raise several implications for future research, as well as to site administrators.
