--- a/modelo_copin/agradecimentos.tex
+++ b/modelo_copin/agradecimentos.tex
@@ -1,1 +1,1 @@
-Agradecimentos
+Gostaria de agradecer à comunidade StackExchange por ser incrível e pelos dados fornecidos para esta pesquisa. Em especial, agradeço à comunidade Cross Validated e o usuário \textit{Glen\_b} que me deu suporte técnico e estatístico para variadas questões que surgiram durante esta pesquisa. 
