--- a/modelo_copin/conclusoes.tex
+++ b/modelo_copin/conclusoes.tex
@@ -1,5 +1,11 @@
 \chapter{Conclusões}
 
 \begin{itemize}
-\item 
+	\item Parágrafo resumindo o que foi feito e um pouco dos resultados;
+	\item Parágrafo sobre confidence e como isso pode ter influenciado na participação de mulheres e nos resultados que encontramos;
+	\item Parágrafo comparando o resultado que achamos com o resultado em outras comunidades;
+	\item Parágrafo falando como este estudo pode ajudar no gender gap problem;
+	\item Como este trabalho pode ajudar a melhorar as comunidades?
+	\item Falar sobre trabalhos futuros;
+	\item 
 \end{itemize}
