--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -1,5 +1,56 @@
 \chapter{Discussão}
 
 \begin{itemize}
-\item 
+	\item
+\end{itemize}
+
+\section{Sobre o número de contribuições}
+
+\begin{itemize}
+	\item Esperávamos que, como as mulheres são minoria, elas iriam participar menos destas comunidades, como foi observado na Wikipedia~\cite{antin2011gender} e em comunidades FOSS~\cite{rustad2011suck}.
+	\item Na maioria das comunidades, mulheres tendem a contribuir mais, principalmente quando falamos em comunidades relacionadas à tecnologia.
+	\item Existe o padrão de perguntas e respostas. 
+	\item Mulheres respondem mais em comunidades voltadas para STEM onde há o estereótipo que existem mais mulheres.
+	\item Aqui cabe uma discussão sobre confidence. %Me parece que responder exige mais confidence que perguntar e comentar
+	\item Contradições sobre ambientes competitivos (com homens)~\cite{gneezy2003performance} e não estarem interessadas em campos relacionados à STEM
+\end{itemize}
+% Esse parágrafo é interessante, mas não sei se é coerente.
+However, in Wikipedia, it has been found that women are more likely to be involved in social- and community-oriented areas of the site~\cite{lam2011wp}. This is in line with women being more likely to comment in the communities we study, where comments are the primarily means of socialization. Nevertheless, the higher likelihood of women to produce questions in three of the communities remains an open question for future work. A possible explanation to be considered is that self-selection leads more men contribute as answering-only users in these communities.
+
+\section{Sobre qualidade}
+
+\begin{itemize}
+	\item Esperávamos que o estereótipo de mulheres e tecnologia~\cite{hyde1990gender} fosse influenciar na opinião que os outros usuários teriam das suas colegas e isso influenciaria no rating que estes dariam às mulheres.
+	\item Rever ~\cite{campbell1986effects, collier2012conflict}. Aparentemente estudos que mostram que mulheres produzem conteúdo com menor qualidade que homens;
+	\item Contudo, percebemos que em poucas comunidades a diferença de qualidade é significantemente diferente entre os gêneros.
+	\item Às vezes mulheres possuem melhor qualidade, às vezes homens. Não é possível encontrar um padrão, apenas que estas diferenças são vistas em menos de 20\% das comunidades.
+	\item More to be defined
+\end{itemize}
+
+
+\section{Sobre tempo de contribuição}
+
+\begin{itemize}
+	\item Apenas em uma comunidade mulheres possuem tempo de vida maior que os homens;
+	\item Das comunidades em que homens têm um maior tempo de vida, a diferença da mediana de tempo de vida entre os dois gêneros só é maior que 20 em 6 comunidades. A idade destas 6 comunidades pode explicar porque encontramos esta diferença;
+	\item Seria interessante uma referência sobre tempo de vida de contribuição em outras comunidades para poder reforçar a explicação acima;
+	\item "StackOverflow was founded by men, and this community may continued as a group of men until reach a certain popularity, number of users and before the birth of StackExchange along with other communities, as most of them come from branches of StackOverflow. "
+	\item Talvez uma tabela ?
+	\item Com relação à frequência de postagens, o contrário ocorre: na maioria das comunidades em que podemos ver diferença estatística, mulheres postam mais frequentemente. 
+	\item Importante notar que a maioria das comunidades que vimos diferença estatistica no lifetime e frequency eram da categoria tecnologia e culture-recreation;
+	\item Há uma suspeita de que mulheres participam bastante destas comunidades, mas as deixam logo. O que poderia ser esse fator que faz com que as mulheres saiam logo ou nem participem at all? 
+	\item Vimos que as contribuições de mulheres são valiosas e relevantes, mas elas não estão contribuindo "o suficiente" ou por tempo suficiente.
+	\item Mas, vale lembrar que esse resultado só é válido para menos de 20\% das comunidades. As demais parecem "saudáveis"
+\end{itemize}
+
+\section{Sobre comportamento ao longo do tempo}
+
+\begin{itemize}
+	\item Pouquíssimas comunidades apresentaram diferença estatística entre gêneros com relação ao aumento de registros por cada gênero ao longo do tempo. Na maioria, mulheres estão se cadastrando mais e essas comunidades são em sua maioria da categoria tecnologia. Seria esta uma esperança?
+	\item Fica faltando a análise da quantidade de contribuições por gênero ao longo do tempo.
+\end{itemize}
+
+\begin{itemize}
+	\item Para todas as hipóteses, poucas foram as comunidades que demonstraram diferença estatística entre os gêneros;
+	\item 
 \end{itemize}
