--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -7,6 +7,7 @@
 	\item Mulheres deixando o ramo antes e em maior quantidade do que homens;
 	\item Razões para mulheres estarem deixando a carreira: estereótipos, unfriendlyness, falta de espaço;
 	\item Consequências: mulheres não se identificam tanto, deixam de participar de comunidades de tecnologia, conteúdo enviesado;
+	\item The starting motivation for this study is a preoccupation with gender diversity. More specifically, with how women participate in contributing to Social Q\&A sites. Recent results point that only a minority of contributors in StackOverflow~\cite{Vasilescu27092013}, the largest site in the StackExchange platform, are women. Moreover, recent releases of diversity information of employees in large companies like Google~\cite{google:report} and Linkedin~\cite{linkedin:report} points out that the proportion of women in tech and leadership roles are low. This result is similar to those of some online communities related to technology like FOSS communities~\cite{rustad2011suck}. Moreover, it has been reported that in StackOverflow people who question the reason for such "gender gap" may not be understood and even mistreated\footnote{http://is.gd/eAnI8R}. These facts match the common stereotyping of women in STEM related fields~\cite{spencer1999stereotype} and women's lower influence in mixed-gender groups~\cite{karpowitz2012gender}. However, if women are currently led to contribute less than men by these communities, StackExchange sites are loosing not only potential contributors, but also the chance of producing content that addresses the views of women, and ultimately of better functioning by having more mixed gender crowds~\cite{marshall1975boys}.
 	\item Existem estudos de gênero em várias comunidades online, mas não nas comunidades do StackExchange como todo;
 	\item Objetivo: estudar o "efeito" de identificar seu gênero em comunidades do StackExchange com relação à participação, percepção de qualidade de conteúdo, tempo de atividade no site, quantidade de contribuições ao longo do tempo e proporção de usuários ativos ao longo do tempo.
 	\item Importância de estudar essas comunidades;
@@ -20,3 +21,19 @@
 	\item Mulheres tendem a participar tanto quanto ou até mais do que homens na maioria das comunidades voltada para tecnologia. 
 	\item Este resultado é importante para acabar com estereótipos e mostrar que mulheres podem e tem seu espaço garantido em comunidades online e comunidades online sobre tecnologia.
 \end{itemize}
+
+\emph{Bussiness problem}: 
+
+\emph{Technical problem}: 
+
+Objetivos: 
+
+Objeto de estudo: Contribuições de um usuário durante toda a sua vida ativa nos sites de Q\&A do grupo StackExchange.
+
+Finalidade: Definir se usuários de gêneros distintos possuem diferenças de comportamento nas comunidades estudadas.
+
+Foco de Qualidade:
+
+Perspectiva: A perspectiva será dos próprios usuários dos sites do StackExchange. Além dos administradores, tanto da plataforma inteira, quanto de cada tema, que poderão identificar os usuários que desejam manter e incentivar na comunidade.
+
+Contexto: Comunidades de perguntas e respostas do StackExchange criadas até Setembro de 2014.
