--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -29,6 +29,7 @@
 
 
 \usepackage{fancyheadings}
+\usepackage{url} 
 \usepackage{graphicx}
 \usepackage{longtable} %tabelas longas, para tabelas que ultrapassam uma pagina
 %\input{psfig.sty}
