--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -1,21 +1,21 @@
 @inproceedings{adamic2008knowledge,
-	Author = {Adamic, Lada A and Zhang, Jun and Bakshy, Eytan and Ackerman, Mark S},
-	Booktitle = {Proceedings of the 17th international conference on World Wide Web},
-	Date-Added = {2013-08-19 01:09:28 +0000},
-	Date-Modified = {2013-08-19 01:09:28 +0000},
-	Organization = {ACM},
-	Pages = {665--674},
-	Title = {Knowledge sharing and yahoo answers: everyone knows something},
-	Year = {2008}}
+  Author = {Adamic, Lada A and Zhang, Jun and Bakshy, Eytan and Ackerman, Mark S},
+  Booktitle = {Proceedings of the 17th international conference on World Wide Web},
+  Date-Added = {2013-08-19 01:09:28 +0000},
+  Date-Modified = {2013-08-19 01:09:28 +0000},
+  Organization = {ACM},
+  Pages = {665--674},
+  Title = {Knowledge sharing and yahoo answers: everyone knows something},
+  Year = {2008}}
 
 @article{Vasilescu27092013,
-	author = {Vasilescu, Bogdan and Capiluppi, Andrea and Serebrenik, Alexander}, 
-	title = {Gender, Representation and Online Participation: A Quantitative Study},
-	year = {2013}, 
-	doi = {10.1093/iwc/iwt047}, 
-	URL = {http://iwc.oxfordjournals.org/content/early/2013/09/27/iwc.iwt047.abstract}, 
-	eprint = {http://iwc.oxfordjournals.org/content/early/2013/09/27/iwc.iwt047.full.pdf+html}, 
-	journal = {Interacting with Computers} 
+  author = {Vasilescu, Bogdan and Capiluppi, Andrea and Serebrenik, Alexander}, 
+  title = {Gender, Representation and Online Participation: A Quantitative Study},
+  year = {2013}, 
+  doi = {10.1093/iwc/iwt047}, 
+  URL = {http://iwc.oxfordjournals.org/content/early/2013/09/27/iwc.iwt047.abstract}, 
+  eprint = {http://iwc.oxfordjournals.org/content/early/2013/09/27/iwc.iwt047.full.pdf+html}, 
+  journal = {Interacting with Computers} 
 }
 
 @article{hargittai2006differences,
@@ -96,12 +96,12 @@
 }
 
 @misc{Hyland:2013:Online,
-  	author = {Hyland, Adam},
-	title = {Global Name Data},
-	month = {jun},
-	year = 2013,
-  	howpublished = {\url{http://bocoup.com/weblog/global-name-data/}},
-  	note = {Accessed: 2014-05-28}
+    author = {Hyland, Adam},
+  title = {Global Name Data},
+  month = {jun},
+  year = 2013,
+    howpublished = {\url{http://bocoup.com/weblog/global-name-data/}},
+    note = {Accessed: 2014-05-28}
 }
 
 @inproceedings{furtado2013contributor,
@@ -202,16 +202,26 @@
   organization={Association for Computational Linguistics}
 }
 
-@misc{google:report,
-  title = {Google’s Workforce Diversity Report},
-    howpublished = {\url{http://www.google.com/diversity/at-google.html}},
-    note = {Accessed: 2014-09-19}
+@misc{linkedin:report,
+  howpublished = {Website},
+  title =        {LinkedIn’s Workforce Diversity Report},
+  month =        {June},
+  day =          12,
+  year =         2014,
+  note =         {Retrieved April 26, 2015 from
+                  \url{http://blog.linkedin.com/2014/06/12/linkedins-workforce-diversity}},
+  annote =       {Website}
 }
 
-@misc{linkedin:report,
-  title = {LinkedIn’s Workforce Diversity Report},
-    howpublished = {\url{http://blog.linkedin.com/2014/06/12/linkedins-workforce-diversity/}},
-    note = {Accessed: 2014-09-19}
+@misc{google:report,
+  howpublished = {Website},
+  title =        {Google’s Workforce Diversity Report},
+  month =        {January},
+  day =          1,
+  year =         2014,
+  note =         {Retrieved April 26, 2015 from
+                  \url{http://www.google.com/diversity/at-google.html}},
+  annote =       {Website}
 }
 
 @inproceedings{schenk2013geo,
