--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -3,3 +3,57 @@
 \begin{itemize}
 	\item 
 \end{itemize}
+
+\section{Número} % (fold)
+\label{sec:numero}
+
+\begin{itemize}
+	\item Q1H1: Em 25 de 29 comunidades mulheres perguntam mais do que homens. Excessões: homebrew, german, poker, gardening. Maioria em que homens perguntam mais é da categoria culture-recreation. Apenas uma comunidade onde mulheres perguntam mais é de culture-recreation.
+	\item Q1H2: Mulheres 20/34, 14/34 homens respondem mais. Das comunidades que homens respondem mais, a maioria está nas categorias technology, science. Das comunidades que mulheres responderam mais, a maioria está em culture-recreation e life-arts. As comunidades de tecnologia e ciência que as mulheres respondem mais são conhecidas por ter mais mulheres na área (ux, sqa, biology)
+	\item Q1H3: Homens comentam mais em 8/17 e mulheres em 9/17. Maioria das mulheres em technology e maioria dos homens em culture-recreation.
+	\item Q1H4: Mulheres tem maiores contribuições em 14/19 e homens em 5/19. Homens tem maioria de contribuições em comunidades culture-recreation e science. Mulheres em technology.
+\end{itemize}
+
+% section n_mero_de_contribui_es (end)
+
+\section{Qualidade} % (fold)
+\label{sec:qualidade}
+
+\begin{itemize}
+	\item Q2H1: Mulheres têm accepted rate maior em 8/13 e homens em 5/13.  Não existe uma maioria.
+	\item Q2H2: Mulheres têm mean utility maior em 10/13 comunidades e homens em 2/13 (stackoverflow e dba). ham deu NaN.
+	\item Q2H3: Mulheres têm avg score de questions maior em 6/18 comunidades e homens em 10/18. startups e poker deram NaN. Mulheres: culture-recreation e technology. Homens technology. Essa foi a única hipótese que as medianas não bateram com o p-valor.
+
+As comunidades que deram NaN foi por que não havia atividades de mulheres naquele determinado critério.
+
+\end{itemize}
+
+% section qualidade (end)
+
+\section{Dedicação}% (fold)
+\label{sec:dedicacao}
+
+\begin{itemize}
+	\item Q3H1: Lifetime maior para homens em todas as comunidades menos wordpress. 18/19 e 1/19
+	\item Q3H2: Apenas duas comunidades homens têm frequencia de postagem maior do que mulheres: chess e movies. 12/14 e 2/14
+\end{itemize}
+
+% section dedicacao (end)
+
+\section{Contribuições Ao Longo do Tempo}% (fold)
+\label{sec:tempo}
+
+\begin{itemize}
+	\item Q4H1: Na maioria das comunidades a contribuição feita por mulheres está aumentando (20/27 - 7/27) a maioria na categoria technology e culture-recreation. Homens contribuem mais em technology tbm. Mas, coeficientes são ínfimos. 
+\end{itemize}
+
+% section tempo (end)
+
+\section{Registros Ao Longo do Tempo}% (fold)
+\label{sec:registros}
+
+\begin{itemize}
+	\item Q5H1: Comunidades que a quantidade de registros de homens têm aumentado: 4/12 patents, blender, chinese, poker. Maioria que mulheres estão se cadastrando mais é na categoria technology. Anyway, coeficientes ainda são bem pequenos.
+\end{itemize}
+
+% section registros (end)
