--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -26,13 +26,11 @@
 
 \emph{Technical problem}: 
 
-Objetivos: 
-
 Objeto de estudo: Contribuições de um usuário durante toda a sua vida ativa nos sites de Q\&A do grupo StackExchange.
 
 Finalidade: Definir se usuários de gêneros distintos possuem diferenças de comportamento nas comunidades estudadas.
 
-Foco de Qualidade:
+Foco de Qualidade: (com respeito à)
 
 Perspectiva: A perspectiva será dos próprios usuários dos sites do StackExchange. Além dos administradores, tanto da plataforma inteira, quanto de cada tema, que poderão identificar os usuários que desejam manter e incentivar na comunidade.
 
