--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -255,8 +255,6 @@
   publisher={Wiley Online Library}
 }
 
-/////// Not cited
-
 @inproceedings{farzan2011increasing,
   title={Increasing commitment to online communities by designing for social presence},
   author={Farzan, Rosta and Dabbish, Laura A and Kraut, Robert E and Postmes, Tom},
@@ -374,5 +372,60 @@
   number={2},
   pages={149--162},
   year={1986},
+  publisher={Elsevier}
+}
+
+@article{leslie2015expectations,
+  title={Expectations of brilliance underlie gender distributions across academic disciplines},
+  author={Leslie, Sarah-Jane and Cimpian, Andrei and Meyer, Meredith and Freeland, Edward},
+  journal={Science},
+  volume={347},
+  number={6219},
+  pages={262--265},
+  year={2015},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{tiedemann2000gender,
+  title={Gender-related beliefs of teachers in elementary school mathematics},
+  author={Tiedemann, Joachim},
+  journal={Educational Studies in Mathematics},
+  volume={41},
+  number={2},
+  pages={191--207},
+  year={2000},
+  publisher={Springer}
+}
+
+@article{kirkcaldy2007parental,
+  title={Parental estimates of their own and their children's intelligence.},
+  author={Kirkcaldy, Bruce and Noack, Peter and Furnham, Adrian and Siefen, Georg},
+  journal={European Psychologist},
+  volume={12},
+  number={3},
+  pages={173},
+  year={2007},
+  publisher={Hogrefe \& Huber Publishers}
+}
+
+@article{hyde2005gender,
+  title={The gender similarities hypothesis.},
+  author={Hyde, Janet Shibley},
+  journal={American psychologist},
+  volume={60},
+  number={6},
+  pages={581},
+  year={2005},
+  publisher={American Psychological Association}
+}
+
+@article{wigfield2000expectancy,
+  title={Expectancy--value theory of achievement motivation},
+  author={Wigfield, Allan and Eccles, Jacquelynne S},
+  journal={Contemporary educational psychology},
+  volume={25},
+  number={1},
+  pages={68--81},
+  year={2000},
   publisher={Elsevier}
 }
