--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -3,3 +3,10 @@
 \begin{itemize}
 \item Male as the null gender
 \end{itemize}
+
+\begin{itemize}
+	\item Mulheres são underrepresented em campos onde acredita-se que é necessário um talento inato para poder ter sucesso na área (caso de Computação e Filosofia; Neurosciência e Astronomia não)\cite{leslie2015expectations}. Já que existe o estereótipo de que mulheres não possuem tal talento\cite{tiedemann2000gender, kirkcaldy2007parental}
+	\item Importante notar que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres.\cite{hyde2005gender}
+	\item "If women internalize the stereotypes, they may also decide that these fields are not for them" \cite{wigfield2000expectancy}.
+	\item 
+\end{itemize}
