--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -1,3 +1,4 @@
+%!TEX root = main_mestrado.tex
 \chapter{Discussão}
 
 \begin{itemize}
@@ -21,7 +22,7 @@ However, in Wikipedia, it has been found that women are more likely to be involv
 
 \begin{itemize}
 	\item Esperávamos que o estereótipo de mulheres e tecnologia~\cite{hyde1990gender} fosse influenciar na opinião que os outros usuários teriam das suas colegas e isso influenciaria no rating que estes dariam às mulheres.
-	\item Rever ~\cite{campbell1986effects, collier2012conflict}. Aparentemente estudos que mostram que mulheres produzem conteúdo com menor qualidade que homens;
+	\item Rever ~\cite{campbell1986effects}\cite{collier2012conflict}. Aparentemente estudos que mostram que mulheres produzem conteúdo com menor qualidade que homens;
 	\item Contudo, percebemos que em poucas comunidades a diferença de qualidade é significantemente diferente entre os gêneros.
 	\item Às vezes mulheres possuem melhor qualidade, às vezes homens. Não é possível encontrar um padrão, apenas que estas diferenças são vistas em menos de 20\% das comunidades.
 	\item More to be defined
