--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -429,3 +429,21 @@
   year={2000},
   publisher={Elsevier}
 }
+
+@book{fox2006women,
+  title={Women, gender, and technology},
+  author={Fox, Mary Frank and Johnson, Deborah G and Rosser, Sue Vilhauer},
+  year={2006},
+  publisher={University of Illinois Press}
+}
+
+@article{ehrlinger2003chronic,
+  title={How chronic self-views influence (and potentially mislead) estimates of performance.},
+  author={Ehrlinger, Joyce and Dunning, David},
+  journal={Journal of personality and social psychology},
+  volume={84},
+  number={1},
+  pages={5},
+  year={2003},
+  publisher={American Psychological Association}
+}
