--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -1,12 +1,16 @@
+%!TEX root = main_mestrado.tex
 \chapter{Revisão Bibliográfica}
 
 \begin{itemize}
-\item Male as the null gender
+\item Male as the null gender\cite{fox2006women}
 \end{itemize}
 
 \begin{itemize}
-	\item Mulheres são underrepresented em campos onde acredita-se que é necessário um talento inato para poder ter sucesso na área (caso de Computação e Filosofia; Neurosciência e Astronomia não)\cite{leslie2015expectations}. Já que existe o estereótipo de que mulheres não possuem tal talento\cite{tiedemann2000gender, kirkcaldy2007parental}
+	\item Mulheres são underrepresented em campos onde acredita-se que é necessário um talento inato para poder ter sucesso na área (caso de Computação e Filosofia; Neurosciência e Astronomia não)\cite{leslie2015expectations}. Já que existe o estereótipo de que mulheres não possuem tal talento\cite{tiedemann2000gender}\cite{kirkcaldy2007parental} 
 	\item Importante notar que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres.\cite{hyde2005gender}
 	\item "If women internalize the stereotypes, they may also decide that these fields are not for them" \cite{wigfield2000expectancy}.
+	\item Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. Mais ainda, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa nem chegue a realizar esta tarefa. Mulheres acham que não são boas em tarefas sobre ciência e isso às influencia a não participar do campo.\cite{ehrlinger2003chronic} Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre STEM, mas elas se dão tão bem quanto homens na maioria delas.\footnote{Talvez isto deva ficar na discussão} "This pattern of data suggests, by extension, that women might disproportionately avoid scientific pursuits because their self-views lead them to mischaracterize how well they are objectively doing on any given scientific task. Because they think they are doing more poorly than do men, they are more likely than men to avoid science when given an option."
 	\item 
 \end{itemize}
+
+
