--- a/modelo_copin/conclusoes.tex
+++ b/modelo_copin/conclusoes.tex
@@ -8,5 +8,5 @@
 	\item Parágrafo falando como este estudo pode ajudar no gender gap problem;
 	\item Como este trabalho pode ajudar a melhorar as comunidades?
 	\item Falar sobre trabalhos futuros;
-	\item 
+	\item Já se sabe que pessoas podem ser influenciadas quanto à maneira que elas acham que vão se sair em uma certa task e que isto pode influenciar na sua vontade de participar de algo \cite{ehrlinger2003chronic}. É possível que estes resultados mudem a percepção de mulheres sobre sua participação no site e as faça participar mais.
 \end{itemize}
