--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -20,6 +20,7 @@
 	\end{itemize}
 	\item Esperávamos que os resultados encontrados aqui batessem com o estereótipo de que mulheres não participam de comunidades online e principalmente àquelas sobre tecnologia.
 	\item Mulheres tendem a participar tanto quanto ou até mais do que homens na maioria das comunidades voltada para tecnologia. 
+	\item Resultados similares podem ser encontrados em outras comunidades como o Piazza\cite{piazza:report}
 	\item Este resultado é importante para acabar com estereótipos e mostrar que mulheres podem e tem seu espaço garantido em comunidades online e comunidades online sobre tecnologia.
 \end{itemize}
 
