--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -62,7 +62,7 @@ showstringspaces=false
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Titulo{Diferenças Entre Gêneros Quanto as Suas Contribuições em Comunidades de Perguntas}
+\Titulo{Desmistificando Estereótipos de Gênero em Comunidades de Perguntas e Respostas}
 \Autor{Milena Sales Araujo}
 \Data{30/04/2015}
 \Area{Ciência da Computação}
