--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -447,3 +447,35 @@
   year={2003},
   publisher={American Psychological Association}
 }
+
+@misc{piazza:report,
+  howpublished = {Website},
+  title =        {STEM Confidence Gap},
+  month =        {January},
+  day =          6,
+  year =         2015,
+  note =         {Retrieved May 3, 2015 from
+                  \url{http://blog.piazza.com/stem-confidence-gap/}},
+  annote =       {Website}
+}
+
+@article{stoet2015sex,
+  title={Sex differences in academic achievement are not related to political, economic, or social equality},
+  author={Stoet, Gijsbert and Geary, David C},
+  journal={Intelligence},
+  volume={48},
+  pages={137--151},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{moss2012science,
+  title={Science faculty’s subtle gender biases favor male students},
+  author={Moss-Racusin, Corinne A and Dovidio, John F and Brescoll, Victoria L and Graham, Mark J and Handelsman, Jo},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={41},
+  pages={16474--16479},
+  year={2012},
+  publisher={National Acad Sciences}
+}
