--- a/modelo_copin/metodos.tex
+++ b/modelo_copin/metodos.tex
@@ -22,11 +22,12 @@ Os dados utilizados
 \begin{itemize}
 	\item Colocar exemplos de inferência de gênero utilizando o classificador automático;
 	\item Não há identificação de gênero no perfil do usuário no StackExchange, então o gênero precisa ser inferido;
-	\item São estudados aqui apenas os usuários ativos e aqueles que podemos facilmente identificar seu 
+	\item São estudados aqui apenas os usuários ativos e aqueles que podemos facilmente identificar seu gênero;
 	\item As principais atividades de um usuário nestes sites são: comentar, perguntar e responder;
 	\item Durante a participação de um usuário nas atividades principais, só é possível identificar o gênero do seu colega por dois meios: foto ou nome;
 	\item resolvemos usar seu nome para identificar o gênero dos usuários.
 	\item Previous research shows that for people with western names, assessing sex based on the first name of an individual is accurate in social networks -- both those which require real names~\cite{tang2011s} and those which don't~\cite{burger2011discriminating}\cite{liu2013s}. 
+	\item We used a classifier which categorizes users into 3 classes based on the probabilistic frequency count under labels Male, Female, Unknown; each label indicates if the majority of people cataloged with a certain name is Male or Female. A name is considered Unknown if there’s no statistical difference between the proportion of Male and Female people cataloged with a certain name.
 	\item descrever como funciona o método de identificação de gênero
 	\item falar sobre o Global Name Data
 	\item justificar porque essa amostra é representativa
@@ -100,7 +101,7 @@ The frequency of participation is the second metric used in this question, and i
 	\item Comunidades com menos de 14 meses foram retiradas porque a regressão estava dando errado (NaN). Acredito que por que foram separados em semestres e 2 semestres (ou 2 pontos) era muito pouco para a regressão
 \end{itemize}
 
-For this research question we want to verify if the lack of female contribution is something new on these communities. Or even if there are any patterns of rise or fall of contributions over time. In other words, we want to answer the following question: \textit{Do the proportion of contributions by each gender change over time ?} Also, we investigated if there are any trends on registrations by each gender, answering the following question: \textit{Do the proportion of registrations by each gender change over time ?}
+For this research question we want to verify if the lack of female contribution is something new on these communities. Or even if there are any patterns of rise or fall of contributions over time. In other words, we want to answer the following question: \textit{Do the proportion of contributions by each gender change over time?} Also, we investigated if there are any trends on registrations by each gender, answering the following question: \textit{Do the proportion of registrations by each gender change over time?}
 
 \textit{H1$_0$: The proportion of contributions by men and women hasn't changed over time.}
 
@@ -113,5 +114,6 @@ For this research question we want to verify if the lack of female contribution 
 	\item Simples justificativa por que cada teste é usado em cada hiposese
 	\item Aqui havia uma tabela com o sumarize de cada métrica em cada comunidade. Acho que não é viável fazer isso aqui, mas é importante citar, para poder  justificar mann whitneey e ouutros testes.
 	\item summary das variáveis
+	\item Falar sobre as regressões e survival analysis. 
 \end{itemize}
 % Our metrics are summarized in Table \ref{tab:summary}. Most of our metrics have highly skewed distributions. The observation that these are non-normal distributions leads to the use of Mann-Whitney two sample tests for answering all hypotheses but the one regarding lifetime. For testing if men and women have different lifetime lengths, a survival analysis along with a LogRank test were employed.
