--- a/modelo_copin/ref.bib
+++ b/modelo_copin/ref.bib
@@ -479,3 +479,11 @@
   year={2012},
   publisher={National Acad Sciences}
 }
+
+@article{fox1992confidence,
+  title={Confidence in science: The gender gap.},
+  author={Fox, Mary F and Firebaugh, Glenn},
+  journal={Social Science Quarterly},
+  year={1992},
+  publisher={Blackwell Publishing}
+}
